2018-02-25  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

	* Handle errors in subtitle XML better (#1209).

2018-02-24  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-02-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.55 released.

2018-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.54 released.

2018-02-10  Carl Hetherington  <cth@carlh.net>

	* Use a different way of getting frame rate from video content; may
	fix #1030.

	* Version 2.11.53 released.

2018-02-09  Carl Hetherington  <cth@carlh.net>

	* Always pre-roll when seeking in DCPs (#1085).

	* Version 2.11.52 released.

2018-02-09  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2018-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.51 released.

2018-02-08  Carl Hetherington  <cth@carlh.net>

	* Fix crash on adding content to a project created from a template
	in some cases (#1192).

2018-02-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.50 released.

2018-02-06  Carl Hetherington  <cth@carlh.net>

	* Fix problems with text subtitle files containing OS X line-endings.

	* Version 2.11.49 released.

2018-02-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.48 released.

2018-02-04  Carl Hetherington  <cth@carlh.net>

	* Allow main DCP-o-matic and batch converter to run on the same
	machine and both get access to encoding servers (#1190).

2018-02-03  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2018-02-02  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2018-02-01  Carl Hetherington  <cth@carlh.net>

	* Don't try to use video streams for which we have no codec (#1184).

	* Updated sv_SE translation from Adam Klotblixt.

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.11.47 released.

2018-01-31  Carl Hetherington  <cth@carlh.net>
