@@ -1,3 +1,8 @@
+2018-02-27  Carl Hetherington  <cth@carlh.net>
+
+	* Add a hint about the stereo-to-5.1 upmixers being
+	`experimental'.
+
 2018-02-25  Carl Hetherington  <cth@carlh.net>
 
 	* Updated es_ES translation from Manuel AC.
